--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -64,4 +64,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/info" />
 
+    <TextView
+        android:key="mytime"
+        android:id="@+id/timer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:text="Timer"
+        android:textColor="@android:color/holo_green_light"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="48dp" />
+
 </android.support.constraint.ConstraintLayout>
